--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+bgp_simple_4byteAS.pl 支持4字节AS号，但仅支持十进制方式表达的4字节AS号，不支持点分方式(尝试过对应的正则表达式，会报错，感觉像是对应的Perl库不支持，当前perl版本5.18.2)。
+
+
+-------------------------------------------------------------------------------------------------
 INTRODUCTION
 ============
 
